# cv-dashboard-cicd

./: .gitignore  Dockerfile  README.md  RESUME_ASSETS.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: ci.yml
